--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="about">About</string>
     <string name="settings">settings</string>
     <string name="manageEx">Manages Extinguisher</string>
+    <string name="edificios">Edificios</string>
+    <string name="fragmentEdificios">FragmentEdificios</string>
 </resources>
