--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="fragmentEdificios">FragmentEdificios</string>
     <string name="building_Creator_button">Building Creator</string>
     <string name="submit">submit</string>
+    <string name="Building_results">Building Results</string>
 </resources>
