Comment libraries and Implement RecyclerView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="building_Creator_button">Building Creator</string>
     <string name="submit">submit</string>
     <string name="Building_results">Building Results</string>
+    <string name="action_Rename">Rename</string>
+    <string name="action_Delete">Delete</string>
 </resources>
