--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ManagesExtinguisher</string>
+    <string name="app_name">Manages Extinguisher</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="login">Login</string>
     <string name="about">About</string>
@@ -52,6 +52,24 @@
     <string name="contentWeightKg">Content Weight (Kg):</string>
     <string name="contentWeightGr">Content Weight (gr):</string>
     <string name="extinguisher_trademark">Extinguisher TradeMark</string>
+    <string name="ModoSinConexion">Offline mode</string>
+    <string name="Login">Login</string>
+    <string name="logout_button_text">Logout</string>
+
+    <string name="login_button_text">Login</string>
+    <string name="login_unsuccessful_msg">Login unsuccessful</string>
+    <string name="welcome_message">It\'s currently %1$s.</string>
+    <string name="welcome_message_authed">Hi %1$s! Did you know that %2$s.</string>
+    <string name="login_prompt">Login to set customizations!</string>
+    <string name="login_btn">Login</string>
+    <string name="settings_btn">Settings</string>
+    <string name="settings_fact_type_title">Fun Fact Type</string>
+
+    <string name="fact_type_android">Android</string>
+    <string name="fact_type_california">California</string>
+
+    <!--Shared Preference Keys -->
+    <string name="preference_fact_type_key">fact_type_pref</string>
 
     <string-array name="content_weight">
         <item>5</item>
